# at

./: .clippy-warning-baseline.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  demo.at  package-lock.json  package.json  sample_benchmark.jsonl  skill.md
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  homebrew.yml  release.yml  wasm.yml
.well-known/skills/default/: skill.md
at/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json
at/.github/workflows/: ci.yml  homebrew.yml  release.yml  wasm.yml
at/crates/at_check/: Cargo.toml
at/crates/at_check/src/: lib.rs
at/crates/at_cli/: Cargo.toml
at/crates/at_cli/src/: main.rs
at/crates/at_fmt/src/: lib.rs
at/crates/at_lint/: Cargo.toml
at/crates/at_lint/src/: lib.rs
at/crates/at_lsp/: Cargo.toml
at/crates/at_lsp/src/: lib.rs
at/crates/at_mcp/: Cargo.toml
at/crates/at_mcp/src/: lib.rs
at/crates/at_parser/src/: lib.rs
at/crates/at_syntax/src/: lib.rs
at/crates/at_vm/src/: lib.rs
at/crates/at_wasm/: Cargo.toml  example.js
at/docs/: README.md  cli.md  install.md  lang.md  wasm.md
at/examples/: bench.at  bench_compare.py  calculator.at  features.at  mcp_tools.at  sum.at
at/stdlib/: std.at
benchmarks/: NumberAnalyzer.java  README.md  dataset.json  number_analyzer.at  number_analyzer.py  run_all.py  run_autocodebench.py  run_benchmark.py  run_eval.py
benchmarks/agent_eval/: README.md  dataset.json  eval_harness.py
benchmarks/autocodebench/: run_autocodebench.py
benchmarks/determinism/: run_determinism_bench.py
benchmarks/execution_speed/: run_speed_bench.py
benchmarks/humaneval_at/: problems.jsonl  run_humaneval.py
benchmarks/token_efficiency/: problems.jsonl  run_token_bench.py
crates/at_check/src/: lib.rs
crates/at_cli/: Cargo.toml
crates/at_cli/src/: main.rs
crates/at_fmt/: Cargo.toml
crates/at_fmt/src/: lib.rs
crates/at_lint/: Cargo.toml
crates/at_lint/src/: lib.rs
crates/at_lsp/: Cargo.toml  README.md
crates/at_lsp/src/: lib.rs
crates/at_mcp/src/: lib.rs
crates/at_parser/: Cargo.toml
crates/at_parser/src/: lib.rs
crates/at_syntax/: Cargo.toml
crates/at_syntax/src/: lib.rs
crates/at_vm/: Cargo.toml
crates/at_vm/src/: lib.rs
crates/at_wasm/: Cargo.toml  README.md  example.html  example.js  example_web.js  wrapper_node.d.ts  wrapper_node.js  wrapper_web.d.ts  wrapper_web.js
crates/at_wasm/src/: lib.rs
docs/: README.md  cli.md  install.md  lang.md  package_manager.md  release.md  wasm.md
examples/: arrays.at  features.at  mcp_call.sh  mcp_call_both.sh  mcp_call_now.sh  primes.at  run_bench.sh  skip_sum.at
scripts/: bump-version.py  check_clippy_warning_budget.py
stdlib/: std.at
