[package]
name = "at"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
at_parser = { path = "../at_parser" }
at_vm = { path = "../at_vm" }
at_mcp = { path = "../at_mcp" }
at_fmt = { path = "../at_fmt" }
at_syntax = { path = "../at_syntax" }
at_lsp = { path = "../at_lsp" }
at_check = { path = "../at_check" }
at_lint = { path = "../at_lint" }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
ureq = "3"
rustyline = "13"
toml = "0.8"
indexmap = "2"
