[package]
name = "at_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
at_parser = { path = "../at_parser" }
at_syntax = { path = "../at_syntax" }
at_check = { path = "../at_check" }
at_lint = { path = "../at_lint" }
at_vm = { path = "../at_vm" }
at_fmt = { path = "../at_fmt" }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
ureq = "2"
