[package]
name = "at_vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
at_syntax = { path = "../at_syntax" }
at_parser = { path = "../at_parser" }
uuid = { version = "1", features = ["v4", "js"] }
serde = { version = "1", features = ["derive", "rc"] }
bincode = "=1.3.3"
sha2 = "0.10"
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
regex-lite = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "=2.12.1"

[dev-dependencies]
at_parser = { path = "../at_parser" }
